	blue/outlaws (the 2nd team), spec/spectator, or join/auto (to force auto-team).
- Fixed bug of auto-team (dead spectators now count as part of the team)
- New cvar g_allowVoteLevelTime: you can't call a vote before this time (in seconds) has passed.
- New cvar g_allowVoteDelay: you have to wait this time after you called a vote to call another one.

Changes in SG 1.1b4-20100116
******************
***** CHANGES ****
- engine source synchronized with ioQuake3 SDK rev1771
- Enhanced SDK portability
- Player will be kicked if he is trying to rename when he was proposed to be kicked
- Enhanced callvote command security
- Player names are now colorized in lists like "callvote kick" list to avoid name confusion
- Fixed a bad prediction case when cg_boostfps is set
- Fixed simultaneous reloading bug in akimbo mode
- Added new command 'addentity', it can be used to test misc_externalentity or any map entity
- Added support for misc_externalmodel map entity, thanks to World Of Padman project
- Fixed bug where having a scoped Sharps in your inventory caused double spread for the other rifles, and the gatling.
- Added close clipping feature for mappers
- Update & authorize servers are now served by smokin-guns.net domain, thanks to L3th4l
- Added support to in-game lagometer setting cg_lagometer to 2
- Enhanced Smokin'Guns motd support
- Added SDK tool for modders
- Fixed cvar type for cg_bob* cvars
- Fix GLSL program loading for custom FBO effects when more than one program is loaded from files

Changes in SG 1.1b3-20091210
******************
***** CHANGES ****
- engine source synchronized with ioQuake3 SDK rev1754
- Added a custom resolution
 - Mode 19: 1280x720 (16:9 HD), suitable to provide youtube HD format video
- support UI item to select OpenAL device from available OpenAL devices
- support new console aspects, thanks to Conq idea. Added 5 cvars to control it:
  - cl_consoleType: "0" classic wooden wall texture, "1" color