@@ -10,8 +10,11 @@ Rcon command:
 /slap		slightly hurt someone, as a warning instead of kicking it
 
 Minilog events:
+RESPAWN		when a player respawn
 INACTIVE	when someone is inactive for more than X seconds, it reports it
 
 Misc:
+Patch shoot thru
 Patch bad physics with rotating mover
+
 
