@@ -1556,6 +1556,7 @@ typedef struct {
 
 #ifdef SMOKINGUNS
 	int				newShotgunPattern;
+	int				maxMoney;
 	int				roundNoMoveTime;
 
 	qboolean		specsareflies;
@@ -1803,6 +1804,7 @@ extern	vmCvar_t		cg_farclipZoomValue;
 
 extern	vmCvar_t		cg_mapLOD;
 
+extern	vmCvar_t		cg_maxMoney;
 extern	vmCvar_t		cg_newShotgunPattern;
 extern	vmCvar_t		cg_roundNoMoveTime;
 
