@@ -214,6 +214,10 @@ void CG_ParseServerinfo( void ) {
 	trap_Cvar_Set("cg_newShotgunPattern", s);
 	cgs.newShotgunPattern = cg_newShotgunPattern.integer;
 
+	s = Info_ValueForKey( info, "g_maxMoney" );
+	trap_Cvar_Set("cg_maxMoney", s);
+	cgs.maxMoney = cg_maxMoney.integer;
+
 	s = Info_ValueForKey( info, "g_roundNoMoveTime" );
 	trap_Cvar_Set("cg_roundNoMoveTime", s);
 	cgs.roundNoMoveTime = (int)(cg_roundNoMoveTime.value * 1000);
